# Curoku

./: Cargo.toml  build.rs
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.svelte  app.css
client/src/lib/: Navbar.svelte  Scene.svelte
src/: handlers.rs  main.rs  routes.rs
