[package]
name = "curoku"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
assert_matches = "1.5.0"
axum = { version = "0.7.5", features = ["tokio", "ws"] }
env_logger = "0.11.5"
futures-util = "0.3.30"
image = "0.25.2"
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tower = { version = "0.5.0", features = ["futures-util", "tokio"] }
tower-http = { version = "0.5.2", features = ["fs", "tokio", "futures-util"] }
